fixed seen color in dark mode

--- a/css/dark.css
+++ b/css/dark.css
@@ -65,6 +65,9 @@ textarea:hover {
 .book {
     color: #f90 !important;
 }
+.seen {
+    color: #ff0 !important;
+}
 .draw {
     color: #f5f5f5;
 }
